[project]
name = "openapi-rulesbank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonschema==4.17.3",
    "langchain==0.0.300",
    "langgraph==0.0.15",
    "markdown==3.4.1",
    "openai==0.27.8",
    "pydantic==1.10.2",
    "pytest==7.1.2",
]

[tool.uv.scripts]
run-flow = "python src/main.py"  # Script para rodar o fluxo
test = "pytest tests/"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  
